# FastAPI_call

./: .gitignore  Dockerfile  README.md  filemanager.py  main.py  pyproject.toml  schemas.py
files/: file_1.txt
tests/: conftest.py  test_api.py  test_filemanager.py
