[tool.poetry]
name = "fastapi-call"
version = "0.1.0"
description = ""
authors = ["progress94den-deisgn <progress94den@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
