[tool.poetry]
name = "fastapi-call"
version = "0.1.0"
description = ""
authors = ["progress94den-deisgn <progress94den@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.0"
uvicorn = "^0.45.0"
python-multipart = "^0.0.29"
pypdf = "^6.4.1"
python-docx = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
